Added configuration for neural network